--- a/theme/love.css
+++ b/theme/love.css
@@ -1,50 +1,39 @@
-* {
-    box-sizing: border-box;
+.page-wrapper {
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #1b272c;
 }
 
-h1 {
-    font-family: arial;
-    color: rgb( 11, 86, 117 );
+.page-footer {
+  width: 100%;
+  text-align: center;
+  margin-top: 24px;
 }
 
-body {
-    background-image: url(bg.png);
-    background-repeat: no-repeat;
-    font-family: arial;
-    margin: 0;
-    padding: none;
-    background-color: rgb( 154, 205, 237 );
-    color: rgb( 28, 78, 104 );
+.game-wrapper {
+  border-radius: 4px;
+  overflow: hidden;
+  height: 600px;
+  border: 1px solid #ff74d3;
 }
 
-footer {
-    font-family: arial;
-    font-size: 12px;
-    padding-left: 10px;
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+.button-go-fullscreen {
+  background-color: #fff;
+  border: 0;
+  border-radius: 4px;
+  padding: 8px 24px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  cursor: pointer;
 }
 
-/* Links */
-a {
-    text-decoration: none;
-}
-a:link {
-    color: rgb( 233, 73, 154 );
-}
-a:visited {
-    color: rgb( 110, 30, 71 );
-}
-a:hover {
-    color: rgb( 252, 207, 230 );
-}
-
-/* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-#canvas {
-    padding-right: 0;
-    display: display;
-    border: 0px none;
-    visibility: hidden;
+.button-go-fullscreen:hover {
+  background-color: #ff74d3;
+  color: #fff;
 }
