--- a/theme/love.css
+++ b/theme/love.css
@@ -1,54 +1,52 @@
-.page-wrapper {
-  display: flex;
+.page {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  inset: 0;
+  overflow-y: auto;
   background-color: #1b272c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.page-footer {
-  width: 100%;
-  text-align: center;
+.page-wrapper {
+  margin: 24px 0;
+  font-size: 0;
+}
+
+main {
+  border: 1px solid #ff74d3;
+}
+
+footer {
+  display: flex;
+  max-width: 800px;
   margin-top: 24px;
 }
 
-.game-wrapper {
-  overflow: hidden;
-  height: 600px;
-  width: 800px;
-  border: 1px solid #ff74d3;
-  border-top: 0;
+footer > div {
+  flex: 1;
 }
 
-.button-go-fullscreen {
-  background-color: #fff;
-  border: 0;
-  border-radius: 4px;
-  padding: 8px 24px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  cursor: pointer;
+footer .button-wrapper {
+  text-align: right;
 }
 
-.button-go-fullscreen:hover {
+footer .button-wrapper > button {
   background-color: #ff74d3;
-  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  font-size: 14px;
 }
 
-.cover-wrapper {
-  width: 100%;
-  font-size: 0;
-  text-align: center;
+footer .text-wrapper p {
+  font-size: 14px;
+  color: #ffffff;
+  margin: 0;
 }
 
-.cover-wrapper img {
-  width: 100%;
-  max-width: 800px;
-  height: auto;
-  border: 1px solid #ff74d3;
-  border-bottom: 0;
+footer .text-wrapper a {
+  color: #ff74d3;
 }
